refactor: roles를 authorities로 변환하는 과정에서 toList()를 사용하도록 리팩토링